--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "grunt": "^0.4.4",
-    "csstree": "^0.1.0",
+    "grunt-csstree": "^0.1.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-clean": "^0.5.0"
   },
