--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "grunt": "^0.4.4",
     "grunt-csstree": "^0.1.0",
     "grunt-contrib-less": "^0.11.0",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "http-server": "^0.6.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
