--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "grunt-csstree": "^0.1.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-clean": "^0.5.0",
-    "http-server": "^0.6.1"
+    "http-server": "^0.6.1",
+    "grunt-contrib-copy": "^0.5.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
