--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-clean": "^0.5.0",
     "http-server": "^0.6.1",
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
